# invitation_serv

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  docker-compose.local.yml  docker-compose.yml
.github/workflows/: general.yml
.sqlx/: query-21a367f3f446406d0a551c1ab049706ea47b730e062f5b384cc9572c7417855c.json  query-afbf0d9e2681f3a92a1f5fb8dccff97e08028b4b00ae061fc1f82cb7bf0e60d0.json
configuration/: base.example.yaml  base.yaml  local.example.yaml  local.yaml  prod.yaml
docker/: docker-compose.dev.yml  docker-compose.yml
migrations/: 20250613012314_create_base_tables.sql
scripts/: init_db.sh
src/: async_ext.rs  config.rs  idempotency.rs  lib.rs  main.rs  middlewares.rs  models.rs  request.rs  response.rs  routes.rs  server.rs  telemetry.rs
src/idempotency/: persistence.rs
src/middlewares/: auth.rs  idempotency.rs
src/models/: event.rs  member.rs  user_session.rs
src/routes/: events.rs  health_check.rs  home.rs  protected_test.rs
src/routes/events/: create_event.rs  get_event.rs  get_events.rs
tests/api/: events.rs  health_check.rs  helper.rs  main.rs
