[package]
name = "invitation_serv"
authors = ["arthurDiff"]
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "invitation_serv"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[dev-dependencies]
reqwest = "0.12.20"
