[package]
name = "invite_server"
authors = ["arthurDiff"]
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "invite_server"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
clerk-rs = { version = "0.4.1", features = ["actix"] }
config = { version = "0.15.11", default-features = false, features = ["yaml"] }
redis = { version = "0.32.2", features = ["tokio-comp"] }
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-aux = { version = "4.7.0", default-features = false }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.17.0", default-features = false, features = [
    "v4",
    "serde",
] }

[dev-dependencies]
once_cell = "1.21.3"
reqwest = "0.12.20"
